--- a/html/night_market/night_market.html
+++ b/html/night_market/night_market.html
@@ -1,170 +1,247 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>廟口特輯</title>
-  <link href="./night_market.css" rel="stylesheet">
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
- 
-  <link rel="icon" href="./images/icon/title_icon.ico" type="image/x-icon"/>
-</head>
-<body>
-    <nav class="navbar">
-      <a href="#"><img class="logo" src="../../use_photo/navbar/kwlogo.png "></a>
-      <a href="#"><img  class="logo2" src="../../use_photo/navbar/fron_logo.png"></a>
-      <div class="img"><img class="menu" src="../../use_photo/navbar/bg.png"></div>
-      <p>小吃攻略/廟口特輯</p>
-      <!-- <div class="banner2">
-      </div> -->
-    </nav>
-    <div class="banner">
-      <p>廟口特輯</p>
-    </div>
-    <main>
-      <section class="info">
-        <img class="info" src="./images/info_top.png">
-        <p class="title">廟口小吃</p>
-        <p class="content">
-          台灣各地有歷史的鄉土小吃區，大都伴隨位於市集、香火鼎盛的廟宇而產生，稱為廟口小吃。基隆奠濟宮的廟口小吃，更因有口皆碑，引來的食客多於香客，形成以美食取勝的的觀光區。
-        </p>
-      </section>
-      <div class="background">
-        <article class="food_1">
+  <html lang="zh-Hant">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>廟口特輯</title>
+    <link href="./night_market.css" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+  
+    <link rel="icon" href="./images/icon/title_icon.ico" type="image/x-icon"/>
+  </head>
+  <body>
+      <nav class="navbar">
+        <aside class="aside">
+          <img class="x" src="../x.svg">
+          <div class="background"></div>
+          <ul>
+            <li class="a1">
+              <div class="theme_block">
+                主題景點
+                <ul class="theme">
+                  <li>
+                    <a href="../mountain/mountain.html">幽遊山徑</a>
+                  </li>
+                  <li>
+                    <a href="../mountain/mountain.html">無敵海景</a>
+                  </li>
+                  <li>
+                    <a href="../mountain/mountain.html">打卡熱點</a>
+                  </li>
+                  <li>
+                    <a href="../mountain/mountain.html">知性之旅</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="a1">
+              <div class="food_block">
+                小吃攻略
+                <ul class="food">
+                  <li>
+                    <a href="../night_market/night_market.html">廟口特輯</a>
+                  </li>
+                  <li>
+                    <a href="../night_market/night_market.html">咖啡之旅</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="a1">
+              <div class="travel_block">
+                行程安排
+                <ul class="travel">
+                  <li>
+                    <a href="../recommend/recommend.html">推薦行程</a>
+                  </li>
+                  <li>
+                    <a href="../custom/custom.html">客制規劃</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="a1">
+              <a href="../store/store.html">選物小店</a>
+            </li>
+            <li class="a1">
+              <a href="../master/master.html">達人分享</a>
+            </li>
+            <li class="a1">
+              <a href="#">會員專區</a>
+            </li>
+          </ul>
+        </aside>
+        <a href="../index/index.html"><img class="logo" src="../../use_photo/navbar/kwlogo.png "></a>
+        <a href="../index/index.html"><img  class="logo2" src="../../use_photo/navbar/fron_logo.png"></a>
+        <div class="img"><img class="menu" src="../../use_photo/navbar/bg.png"></div>
+        <p>小吃攻略/廟口特輯</p>
+        <!-- <div class="banner2">
+        </div> -->
+      </nav>
+      <div class="banner">
+        <p>廟口特輯</p>
+      </div>
+      <main>
+        <section class="info">
+          <img class="info" src="./images/info_top.png">
+          <p class="title">廟口小吃</p>
+          <p class="content">
+            台灣各地有歷史的鄉土小吃區，大都伴隨位於市集、香火鼎盛的廟宇而產生，稱為廟口小吃。基隆奠濟宮的廟口小吃，更因有口皆碑，引來的食客多於香客，形成以美食取勝的的觀光區。
+          </p>
+        </section>
+        <div class="background">
+          <article class="food_1">
+            <div class="food">
+              <div class="img"><img src="./images/img_1_1.png"></div>
+              <div class="text">
+                <p class="title"><span class="background">羊妹妹羊肉魯肉飯</span></p>
+                <p class="info">地址：基隆市仁愛區仁三路27之1號<br>電話：(02) 2424-6781</p>
+                <p class="time">營業時間：11:00-23:45（周一至周五、周日）；<br>11:00-01:00（周六</p>
+              </div>
+            </div>
+          </article>
+          <article class="food_1_1">
+            <div class="food">
+              <div class="text">
+                <p class="title">羊肉魯肉飯</p>
+                <p class="info">在粒粒分明的白飯上，淋上以羊肉碎片熬煮而成的肉燥，帶點沙茶香，上頭以芹菜末點綴，鮮綠般的色澤，增添賣相。略一攪拌，可以吃到羊肉的細嫩，肉燥的豐腴，卻沒有一般滷肉飯的油膩，相當清爽。價格親民，一碗只需30元！</p>
+              </div>
+              <div class="img">
+                <img src="./images/img_1_2.png">
+              </div>
+            </div>
+          </article>
+          <article class="food_1_2">
+            <div class="food">
+              <div class="img">
+                <img src="./images/img_1_3.png">
+              </div>
+              <div class="text">
+                <p class="title">羊肉清湯</p>
+                <p class="info">這裡的湯頭有著鮮明的甜味，店點微微的藥膳風味，冬天一喝身體瞬間暖和起來的那種。
+                  羊肉一樣沒有腥膻味，肉嫩好咬，與薑絲一同抓起沾醬，越吃越涮嘴。</p>
+              </div>
+            </div>
+          </article>
+        </div>  
+        <!-- 鼎邊銼 ----------------------------->
+        <article class="food_2">
           <div class="food">
-            <div class="img"><img src="./images/img_1_1.png"></div>
+            <div class="img"><img src="./images/img_2_1.png"></div>
             <div class="text">
-              <p class="title"><span class="background">羊妹妹羊肉魯肉飯</span></p>
-              <p class="info">地址：基隆市仁愛區仁三路27之1號<br>電話：(02) 2424-6781</p>
-              <p class="time">營業時間：11:00-23:45（周一至周五、周日）；<br>11:00-01:00（周六</p>
+              
+              <p class="title"><span class="background">邢記鼎邊趖</span></p>
+              <p class="info">地址：基隆市仁愛區仁三路25號之1號旁<br>電話：0937-865-733</p>
+              <p class="time">營業時間：10:30-02:00（周一至周日）<br>11:00-01:00（周六</p>
             </div>
           </div>
         </article>
         <article class="food_1_1">
           <div class="food">
             <div class="text">
-              <p class="title">羊肉魯肉飯</p>
-              <p class="info">在粒粒分明的白飯上，淋上以羊肉碎片熬煮而成的肉燥，帶點沙茶香，上頭以芹菜末點綴，鮮綠般的色澤，增添賣相。略一攪拌，可以吃到羊肉的細嫩，肉燥的豐腴，卻沒有一般滷肉飯的油膩，相當清爽。價格親民，一碗只需30元！</p>
+              <p class="title">招牌鼎邊銼</p>
+              <p class="info">小小一碗鼎邊趖裡頭有肉羹、香菇、金針、筍絲、蒜頭酥、蝦米、魷魚絲、芹菜、高麗菜、小魚乾及蝦仁湯頭清淡帶點胡椒香氣，我很喜歡吃趖，但一碗都只有幾塊而已。口感類似板條，但又比板條還Q滑。</p>
             </div>
             <div class="img">
-              <img src="./images/img_1_2.png">
+              <img src="./images/img_2_2.png">
             </div>
           </div>
         </article>
         <article class="food_1_2">
           <div class="food">
             <div class="img">
-              <img src="./images/img_1_3.png">
+              <img src="./images/img_2_3.png">
             </div>
             <div class="text">
-              <p class="title">羊肉清湯</p>
-              <p class="info">這裡的湯頭有著鮮明的甜味，店點微微的藥膳風味，冬天一喝身體瞬間暖和起來的那種。
-                羊肉一樣沒有腥膻味，肉嫩好咬，與薑絲一同抓起沾醬，越吃越涮嘴。</p>
+              <p class="title">滷肉飯</p>
+              <p class="info">一碗滷肉飯要好吃，最重要的還是米飯，米飯Q彈有嚼勁，粒粒分明顆顆飽滿，吸滿了滷肉湯汁，大口大口扒飯真的很過癮!</p>
             </div>
           </div>
         </article>
-      </div>  
-      <!-- 鼎邊銼 ----------------------------->
-      <article class="food_2">
-        <div class="food">
-          <div class="img"><img src="./images/img_2_1.png"></div>
-          <div class="text">
-            
-            <p class="title"><span class="background">邢記鼎邊趖</span></p>
-            <p class="info">地址：基隆市仁愛區仁三路25號之1號旁<br>電話：0937-865-733</p>
-            <p class="time">營業時間：10:30-02:00（周一至周日）<br>11:00-01:00（周六</p>
-          </div>
+        <!-- 甜不辣 ----------------------------->
+        <div class="background_2">
+          <article class="food_3">
+            <div class="food">
+              <div class="img"><img src="./images/img_3_1.png"></div>
+              <div class="text">
+                <p class="title"><span class="background">王記天婦羅</span></p>
+                <p class="info">地址：基隆市仁愛區仁三路16號<br>電話：0937-673-445</p>
+                <p class="time">營業時間：10:30-02:00（周二至周日）<br>11:00-01:00（周六</p>
+              </div>
+            </div>
+          </article>
+          <article class="food_1_1">
+            <div class="food">
+              <div class="text">
+                <p class="title">天婦羅</p>
+                <p class="info">每片天婦羅在熱騰的花生油裡都被炸的拋拋貌，油軟金黃王記的天婦羅，份量剛好，邊走邊吃，能嚐到味道，也不會讓人感到太過油膩。</p>
+              </div>
+              <div class="img">
+                <img src="./images/img_3_2.png">
+              </div>
+            </div>
+          </article>
+          <article class="food_1_2_1">
+            <div class="food">
+              <div class="img">
+                <img src="./images/img_3_3.png">
+              </div>
+              <div class="text">
+                <p class="title">天婦羅</p>
+                <p class="info">酥爽又彈牙的炸天婦羅，配上鹽漬小黃瓜和沾一點的酸辣醬，是最完美的天婦羅</p>
+              </div>
+            </div>
+          </article>
         </div>
-      </article>
-      <article class="food_1_1">
-        <div class="food">
-          <div class="text">
-            <p class="title">招牌鼎邊銼</p>
-            <p class="info">小小一碗鼎邊趖裡頭有肉羹、香菇、金針、筍絲、蒜頭酥、蝦米、魷魚絲、芹菜、高麗菜、小魚乾及蝦仁湯頭清淡帶點胡椒香氣，我很喜歡吃趖，但一碗都只有幾塊而已。口感類似板條，但又比板條還Q滑。</p>
-          </div>
-          <div class="img">
-            <img src="./images/img_2_2.png">
-          </div>
-        </div>
-      </article>
-      <article class="food_1_2">
-        <div class="food">
-          <div class="img">
-            <img src="./images/img_2_3.png">
-          </div>
-          <div class="text">
-            <p class="title">滷肉飯</p>
-            <p class="info">一碗滷肉飯要好吃，最重要的還是米飯，米飯Q彈有嚼勁，粒粒分明顆顆飽滿，吸滿了滷肉湯汁，大口大口扒飯真的很過癮!</p>
-          </div>
-        </div>
-      </article>
-      <!-- 甜不辣 ----------------------------->
-      <div class="background_2">
-        <article class="food_3">
-          <div class="food">
-            <div class="img"><img src="./images/img_3_1.png"></div>
-            <div class="text">
-              <p class="title"><span class="background">王記天婦羅</span></p>
-              <p class="info">地址：基隆市仁愛區仁三路16號<br>電話：0937-673-445</p>
-              <p class="time">營業時間：10:30-02:00（周二至周日）<br>11:00-01:00（周六</p>
-            </div>
-          </div>
-        </article>
-        <article class="food_1_1">
-          <div class="food">
-            <div class="text">
-              <p class="title">天婦羅</p>
-              <p class="info">每片天婦羅在熱騰的花生油裡都被炸的拋拋貌，油軟金黃王記的天婦羅，份量剛好，邊走邊吃，能嚐到味道，也不會讓人感到太過油膩。</p>
-            </div>
-            <div class="img">
-              <img src="./images/img_3_2.png">
-            </div>
-          </div>
-        </article>
-        <article class="food_1_2_1">
-          <div class="food">
-            <div class="img">
-              <img src="./images/img_3_3.png">
-            </div>
-            <div class="text">
-              <p class="title">天婦羅</p>
-              <p class="info">酥爽又彈牙的炸天婦羅，配上鹽漬小黃瓜和沾一點的酸辣醬，是最完美的天婦羅</p>
-            </div>
-          </div>
-        </article>
       </div>
-    </div>
-    </main>
-    <div class="footer">
-      <div class="index">
-      <a href="#">常見問題</a>
-      <a href="#">交通資訊</a>
-      <a href="#">聯絡我們</a>
-      <a href="#">隱私政策</a>
-      <a href="#">服務安全宣告</a>
-    </div>
-    <div class="slogan">
-      <p class="h1">基隆漫步 Keelung Walk</p>
-      <a class="fbicon" href="#"><img src="../../use_photo/footer/fb.png"></a>
-      <a class="igicon" href="#"><img src="../../use_photo/footer/ig.png"></a>
-      <p class="local">連結在地生活、人物、文化、飲食、旅遊
-        深入更多的精彩。</p>
-      <p class="copy">Copyright  2021 基隆漫步 Keelung Walk All rights reserved.</p>
-    </div>
-    <div class="tiba">
-      <p>本網站為緯育TibaMe前端設計工程師班第104期學員專題作品，
-        <br>
-        本平台僅供學習、展示之用。參考資源:Pinterest|MightyJaxx|Minifig Builder|DDTStore。
-        <br>
-        &#42;若有侵權疑慮，您可以私訊[TibaMe-前端設計工程師養成班]，後續會由專人協助處理。
-        <br> 
-        [TibaMe-前端設計工程師養成班]請超連結<a href="https://www.facebook.com/webindex/">https://www.facebook.com/webindex/</a>
-      </p>
-    </div>
-  </div>
-</body>
+      </main>
+      <div class="footer">
+        <div class="index">
+        <a href="#">常見問題</a>
+        <a href="#">交通資訊</a>
+        <a href="#">聯絡我們</a>
+        <a href="#">隱私政策</a>
+        <a href="#">服務安全宣告</a>
+        </div>
+        <div class="slogan">
+          <p class="h1">基隆漫步 Keelung Walk</p>
+          <a class="fbicon" href="#"><img src="../../use_photo/footer/fb.png"></a>
+          <a class="igicon" href="#"><img src="../../use_photo/footer/ig.png"></a>
+          <p class="local">連結在地生活、人物、文化、飲食、旅遊
+            深入更多的精彩。</p>
+          <p class="copy">Copyright  2021 基隆漫步 Keelung Walk All rights reserved.</p>
+        </div>
+        <div class="tiba">
+          <p>本網站為緯育TibaMe前端設計工程師班第72期學員專題作品
+            <br>
+            &#42;若有侵權疑慮，您可以私訊<a href="https://www.facebook.com/webindex/">[TibaMe-前端設計工程師養成班]</a>，後續會由專人協助處理。
+            <br> 
+          <a href="https://docs.google.com/document/d/1MTq7m2yDvs8SjwMVf-UZ7V_P-xti-CthnQFX-fWS7ks/edit?usp=sharing">-----網站參考資源請點此-----</a>
+          </p>
+        </div>
+      </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+      $(function(){
+
+      // 點擊
+      $("div.img").on("click", function(){
+        // -open 的樣式切換
+      $("aside").toggleClass("-open");
+        });
+      });
+      $(function(){
+
+      // 點擊
+      $("img.x").on("click", function(){
+          // -open 的樣式切換
+      $("aside").removeClass("-open");
+          });
+      });
+    </script>
+  </body>
 </html>
