--- a/html/mountain/mountain.html
+++ b/html/mountain/mountain.html
@@ -1,103 +1,180 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>幽遊山徑</title>
-  <link href="./mountain.css" rel="stylesheet">
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-  <link href="../navbar.css" rel="stylesheet">
-  <link href="../footer.css" rel="stylesheet">
-  <link rel="icon" href="./images/icon/title_icon.ico" type="image/x-icon"/>
-</head>
-<body>
-    <nav class="navbar">
-      <a href="#"><img class="logo" src="../../use_photo/navbar/kwlogo.png "></a>
-      <a href="#"><img  class="logo2" src="../../use_photo/navbar/fron_logo.png"></a>
-      <div class="img"><img class="menu" src="../../use_photo/navbar/bg.png"></div>
-      <p>主題景點/幽遊山徑</p>
-      <!-- <div class="banner2">
-      </div> -->
-    </nav>
-    <div class="banner">
-      <p>幽遊山徑</p>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>幽遊山徑</title>
+    <link href="./mountain.css" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link href="../navbar.css" rel="stylesheet">
+    <link href="../footer.css" rel="stylesheet">
+    <link rel="icon" href="./images/icon/title_icon.ico" type="image/x-icon"/>
+  </head>
+  <body>
+      <nav class="navbar">
+        <aside class="aside">
+          <img class="x" src="../x.svg">
+          <div class="background"></div>
+          <ul>
+            <li class="a1">
+              <div class="theme_block">
+                主題景點
+                <ul class="theme">
+                  <li>
+                    <a href="../mountain/mountain.html">幽遊山徑</a>
+                  </li>
+                  <li>
+                    <a href="../mountain/mountain.html">無敵海景</a>
+                  </li>
+                  <li>
+                    <a href="../mountain/mountain.html">打卡熱點</a>
+                  </li>
+                  <li>
+                    <a href="../mountain/mountain.html">知性之旅</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="a1">
+              <div class="food_block">
+                小吃攻略
+                <ul class="food">
+                  <li>
+                    <a href="../night_market/night_market.html">廟口特輯</a>
+                  </li>
+                  <li>
+                    <a href="../night_market/night_market.html">咖啡之旅</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="a1">
+              <div class="travel_block">
+                行程安排
+                <ul class="travel">
+                  <li>
+                    <a href="../recommend/recommend.html">推薦行程</a>
+                  </li>
+                  <li>
+                    <a href="../custom/custom.html">客制規劃</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="a1">
+              <a href="../store/store.html">選物小店</a>
+            </li>
+            <li class="a1">
+              <a href="../master/master.html">達人分享</a>
+            </li>
+            <li class="a1">
+              <a href="#">會員專區</a>
+            </li>
+          </ul>
+        </aside>
+        <a href="../index/index.html"><img class="logo" src="../../use_photo/navbar/kwlogo.png "></a>
+        <a href="../index/index.html"><img  class="logo2" src="../../use_photo/navbar/fron_logo.png"></a>
+        <div class="img"><img class="menu" src="../../use_photo/navbar/bg.png"></div>
+        <p>主題景點/幽遊山徑</p>
+        <!-- <div class="banner2">
+        </div> -->
+      </nav>
+      <div class="banner">
+        <p>幽遊山徑</p>
+      </div>
+      
+      <main class="main">
+        <p class="sol animate__animated animate__fadeInDown">基隆擁抱著海洋與山丘，愜意的吹著山風俯瞰海洋，亦或是沿著海岸望向山丘，都是遊歷基隆的最佳選擇</p>
+        <div class="valley">
+          <p class="valley">忘憂谷</p>
+          <p class="valley_content">基隆市八斗子漁港旁的美麗山谷，與山海相依，望幽谷是一個V字型的山谷，可在綠油油的草地放鬆也可看到八斗子漁港來往的漁船，以及可眺望到遠處的基隆嶼，遊客至此，在環狀的稜線及山谷步道，漫步於山谷草地，走於臨崖的稜線，遠眺海天，俯瞰崖下的海蝕平台豆腐岩，還有雄奇可觀的臨海峭壁，夜晚時分海面上漁火點點與九份山城的燈火，形成一齣唯美的山海之戀。</p>
+          <img class="icon" src="./images/icon/Group_icon.png">
+          <img class="valley_img" src="./images/valley.jpg">
+          <img class="row" src="./images/other/row.png">
+          <p class="position">望幽谷濱海步道</p>
+          <p class="bus">基隆市公車總站搭103號公車至「八斗子站」下車</p>
+          <p class="park">停車場 65高地收費停車場</p>
+        </div>
+        <div class="rock">
+          <p class="valley">老鷹岩</p>
+          <p class="valley_content">老鷹岩觀景台可以俯瞰著大武崙澳底漁港，遠處那小小凸出的石頭則是基隆嶼，觀景台旁的基石有一個明顯的控制點，除了這裡的展望台角度特別好之外，沿著回程的路上也可以到城堡觀景台 ，而那邊的高度則是可以看到整個情人湖的高點，試著在這附近找看看有沒有不同角度可以看到漁港的位置。</p>
+          <img class="icon" src="./images/icon/Group_icon.png">
+          <img class="valley_img" src="./images/rock.jpg">
+          <img class="row" src="./images/other/row.png">
+          <p class="position">基隆市中山區大武崙砲台步道內</p>
+          <p class="bus">搭乘基隆市公車509號「情人湖站」下車</p>
+          <p class="park">上下兩處停車場</p>
+        </div>
+        <div class="hole">
+          <p class="valley">佛手洞</p>
+          <p class="valley_content">佛手洞之名係因洞內深處的石壁上方，有天然風化形成像是手掌和五指的節理，唯妙唯肖就像是佛的手印，加上又位於「仙洞巖」隔壁，所以被取名「佛手洞」，佛手洞內有數個走道分別通往不同洞窟，走入洞穴有種探險掘密的新鮮觸動，陰涼感受又如天然冷氣，十分特殊。</p>
+          <img class="icon" src="./images/icon/Group_icon.png">
+          <img class="valley_img" src="./images/hole.jpeg">
+          <img class="row" src="./images/other/row.png">
+          <p class="position">基隆市中山區仁安街11號</p>
+          <p class="bus">搭乘基隆市公車301、302號於「仙洞巖站」下車</p>
+          <p class="park">洞前廣場及道路旁可免費停車</p>
+        </div>
+        <div class="guess">
+          <P>猜你也想去</P>
+        </div>
+        <div class="column">
+          <a href="#"><img src="./images/go1.png"></a>
+          <a href="#"><img src="./images/go2.png"></a>
+          <a href="#"><img src="./images/go3.png"></a>
+          <a href="#"><img src="./images/go4.png"></a>
+          <a href="#"><img src="./images/go5.png"></a>
+          <a  href="#"><img class="top_gap" src="./images/go6.png"></a>
+          <a class="bottom_gap" href="#"><img src="./images/go7.png"></a>
+        </div>
+      </main>
+      <div class="footer">
+        <div class="index">
+        <a href="#">常見問題</a>
+        <a href="#">交通資訊</a>
+        <a href="#">聯絡我們</a>
+        <a href="#">隱私政策</a>
+        <a href="#">服務安全宣告</a>
+      </div>
+      <div class="slogan">
+        <p class="h1">基隆漫步 Keelung Walk</p>
+        <a class="fbicon" href="#"><img src="../../use_photo/footer/fb.png"></a>
+        <a class="igicon" href="#"><img src="../../use_photo/footer/ig.png"></a>
+        <p class="local">連結在地生活、人物、文化、飲食、旅遊
+          深入更多的精彩。</p>
+        <p class="copy">Copyright  2021 基隆漫步 Keelung Walk All rights reserved.</p>
+      </div>
+      <div class="tiba">
+        <p>本網站為緯育TibaMe前端設計工程師班第72期學員專題作品
+          <br>
+          &#42;若有侵權疑慮，您可以私訊<a href="https://www.facebook.com/webindex/">[TibaMe-前端設計工程師養成班]</a>，後續會由專人協助處理。
+          <br> 
+        <a href="https://docs.google.com/document/d/1MTq7m2yDvs8SjwMVf-UZ7V_P-xti-CthnQFX-fWS7ks/edit?usp=sharing">-----網站參考資源請點此-----</a>
+        </p>
+      </div>
     </div>
-    
-    <main class="main">
-      <p class="sol animate__animated animate__fadeInDown">基隆擁抱著海洋與山丘，愜意的吹著山風俯瞰海洋，亦或是沿著海岸望向山丘，都是遊歷基隆的最佳選擇</p>
-      <div class="valley">
-        <p class="valley">忘憂谷</p>
-        <p class="valley_content">基隆市八斗子漁港旁的美麗山谷，與山海相依，望幽谷是一個V字型的山谷，可在綠油油的草地放鬆也可看到八斗子漁港來往的漁船，以及可眺望到遠處的基隆嶼，遊客至此，在環狀的稜線及山谷步道，漫步於山谷草地，走於臨崖的稜線，遠眺海天，俯瞰崖下的海蝕平台豆腐岩，還有雄奇可觀的臨海峭壁，夜晚時分海面上漁火點點與九份山城的燈火，形成一齣唯美的山海之戀。</p>
-        <img class="icon" src="./images/icon/Group_icon.png">
-        <img class="valley_img" src="./images/valley.jpg">
-        <img class="row" src="./images/other/row.png">
-        <p class="position">望幽谷濱海步道</p>
-        <p class="bus">基隆市公車總站搭103號公車至「八斗子站」下車</p>
-        <p class="park">停車場 65高地收費停車場</p>
-      </div>
-      <div class="rock">
-        <p class="valley">老鷹岩</p>
-        <p class="valley_content">老鷹岩觀景台可以俯瞰著大武崙澳底漁港，遠處那小小凸出的石頭則是基隆嶼，觀景台旁的基石有一個明顯的控制點，除了這裡的展望台角度特別好之外，沿著回程的路上也可以到城堡觀景台 ，而那邊的高度則是可以看到整個情人湖的高點，試著在這附近找看看有沒有不同角度可以看到漁港的位置。</p>
-        <img class="icon" src="./images/icon/Group_icon.png">
-        <img class="valley_img" src="./images/rock.jpg">
-        <img class="row" src="./images/other/row.png">
-        <p class="position">基隆市中山區大武崙砲台步道內</p>
-        <p class="bus">搭乘基隆市公車509號「情人湖站」下車</p>
-        <p class="park">上下兩處停車場</p>
-      </div>
-      <div class="hole">
-        <p class="valley">佛手洞</p>
-        <p class="valley_content">佛手洞之名係因洞內深處的石壁上方，有天然風化形成像是手掌和五指的節理，唯妙唯肖就像是佛的手印，加上又位於「仙洞巖」隔壁，所以被取名「佛手洞」，佛手洞內有數個走道分別通往不同洞窟，走入洞穴有種探險掘密的新鮮觸動，陰涼感受又如天然冷氣，十分特殊。</p>
-        <img class="icon" src="./images/icon/Group_icon.png">
-        <img class="valley_img" src="./images/hole.jpeg">
-        <img class="row" src="./images/other/row.png">
-        <p class="position">基隆市中山區仁安街11號</p>
-        <p class="bus">搭乘基隆市公車301、302號於「仙洞巖站」下車</p>
-        <p class="park">洞前廣場及道路旁可免費停車</p>
-      </div>
-      <div class="guess">
-        <P>猜你也想去</P>
-      </div>
-      <div class="column">
-        <a href="#"><img src="./images/go1.png"></a>
-        <a href="#"><img src="./images/go2.png"></a>
-        <a href="#"><img src="./images/go3.png"></a>
-        <a href="#"><img src="./images/go4.png"></a>
-        <a href="#"><img src="./images/go5.png"></a>
-        <a  href="#"><img class="top_gap" src="./images/go6.png"></a>
-        <a class="bottom_gap" href="#"><img src="./images/go7.png"></a>
-      </div>
-    </main>
-    <div class="footer">
-      <div class="index">
-      <a href="#">常見問題</a>
-      <a href="#">交通資訊</a>
-      <a href="#">聯絡我們</a>
-      <a href="#">隱私政策</a>
-      <a href="#">服務安全宣告</a>
-    </div>
-    <div class="slogan">
-      <p class="h1">基隆漫步 Keelung Walk</p>
-      <a class="fbicon" href="#"><img src="../../use_photo/footer/fb.png"></a>
-      <a class="igicon" href="#"><img src="../../use_photo/footer/ig.png"></a>
-      <p class="local">連結在地生活、人物、文化、飲食、旅遊
-        深入更多的精彩。</p>
-      <p class="copy">Copyright  2021 基隆漫步 Keelung Walk All rights reserved.</p>
-    </div>
-    <div class="tiba">
-      <p>本網站為緯育TibaMe前端設計工程師班第104期學員專題作品，
-        <br>
-        本平台僅供學習、展示之用。參考資源:Pinterest|MightyJaxx|Minifig Builder|DDTStore。
-        <br>
-        &#42;若有侵權疑慮，您可以私訊[TibaMe-前端設計工程師養成班]，後續會由專人協助處理。
-        <br> 
-        [TibaMe-前端設計工程師養成班]請超連結<a href="https://www.facebook.com/webindex/">https://www.facebook.com/webindex/</a>
-      </p>
-    </div>
-  </div>
-</body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      <script>
+        $(function(){
+
+        // 點擊
+        $("div.img").on("click", function(){
+          // -open 的樣式切換
+        $("aside").toggleClass("-open");
+          });
+        });
+        $(function(){
+
+        // 點擊
+        $("img.x").on("click", function(){
+            // -open 的樣式切換
+        $("aside").removeClass("-open");
+            });
+        });
+      </script>
+  </body>
 </html>
