--- a/html/index/index.html
+++ b/html/index/index.html
@@ -153,22 +153,22 @@
           </div>
           <div class="grid">
             <div class="grid_item">
-              <a href="#"><img class="po1" src="./images/proman/p1.png"></a>
+              <a href="../master/master.html"><img class="po1" src="./images/proman/p1.png"></a>
             </div>
             <div class="grid_item">
-              <a href="#"><img class="po2" src="./images/proman/p3.png"></a>
+              <a href="../master/master.html"><img class="po2" src="./images/proman/p3.png"></a>
             </div>
             <div class="grid_item">
-              <img class="po3" src="./images/proman/p2.png">
+              <a href="../master/master.html"><img class="po3" src="./images/proman/p2.png"></a>
             </div>
             <div class="grid_item">
-              <a href="#"><img class="po4" src="./images/proman/p4.png"></a>
+              <a href="../master/master.html"><img class="po4" src="./images/proman/p4.png"></a>
             </div>
             <div class="grid_item">
-              <a href="#"><img class="po5" src="./images/proman/p5.png"></a>
+              <a href="../master/master.html"><img class="po5" src="./images/proman/p5.png"></a>
             </div>
             <div class="grid_item">
-              <a href="#"><img class="po6" src="./images/proman/p6.png"></a>
+              <a href="../master/master.html"><img class="po6" src="./images/proman/p6.png"></a>
             </div>
           </div>
       </article>
