--- a/html/store/store.html
+++ b/html/store/store.html
@@ -89,6 +89,8 @@
         <div class="product_area">
           <div class="product_1">
             <img class="product_1_1" src="./image/product_1_1.jpg">
+            <!-- <img class="product_1_1" src="./image/product_1_2.jpg">
+            <img class="product_1_1" src="./image/product_1_3.jpg"> -->
             <p class="title">和平束口袋</p>
             <p class="price">NT$ 250</p>
             <p class="content">採用天然棉花製造，不再漂洗、染色， 布料上的小黑點是製作過程留下的天然棉花殼， 純淨簡單永續的生活風格成為和平束口袋的特色。</p>
@@ -175,6 +177,17 @@
       $("aside").removeClass("-open");
           });
       });
+    </script>
+    <!-- <script src="../vendors/JQuery/JQueryCDN.js"></script>
+    <script src="../../js/slick-1.8.1/slick/slick.js"></script>
+    <script>
+      $('.product_1').slick({
+          dots: true,
+          infinite: true,
+          speed: 500,
+          fade: true,
+          cssEase: 'linear'
+        }); -->
     </script>
   </body>
 </html>
