--- a/js/js_play.html
+++ b/js/js_play.html
@@ -5,32 +5,56 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Document</title>
-      <link rel="stylesheet" type="text/css" href="../js/slick-1.8.1/slick/slick.css">
-      <link rel="stylesheet" type="text/css" href="../js/slick-1.8.1/slick/slick-theme.css">
+      <link rel="stylesheet" type="text/css" href="./slick-1.8.1/slick/slick.css">
+      <link rel="stylesheet" type="text/css" href="./slick-1.8.1/slick/slick-theme.css">
       <style>
+        body{
+          background-color: rgb(252, 221, 221);
+        }
         div{
-          width: 300px;
-          height: 300px;
+          margin: 0 auto;
+          width: 530px;
+          height: 355px;
           
         }
         img{
-          width: 300px;
-          height: 300px;
+          width: 530px;
+          height: 355px;
 
         }
+        .slick-dots {
+          position: absolute;
+          bottom: 10px;
+          display: block;
+          width: 100%;
+          padding: 0;
+          margin: 0;
+          list-style: none;
+          text-align: center;
+          }
+          .slick-prev:before{
+            display: none;
+          }
+          .slick-next:before{
+            display: none;
+          }
+          .slick-dots li button:before {
+            opacity: .25;
+            color: white;
 
+          }
       </style>
     </head>
     <body>
 
       <div class="play">
-        <div><img src="./index/images/turn/turn1.png"></div>
-        <div><img src="./index/images/turn/turn2.png"></div>
-        <div><img src="./index/images/turn/turn3.jpeg"></div>
+        <div><img src="../html/index/images/turn/turn1.png"></div>
+        <div><img src="../html/index/images/turn/turn2.png"></div>
+        <div><img src="../html/index/images/turn/turn3.jpeg"></div>
       </div>
-      <script src="./vendors/JQuery/JQueryCDN.js"></script>
-      <script src="../js/slick-1.8.1/slick/slick.js"></script>
-      <script >
+      <script src="../html/vendors/JQuery/JQueryCDN.js"></script>
+      <script src="./slick-1.8.1/slick/slick.js"></script>
+      <script>
      
      $('.play').slick({
         dots: true,
