--- a/html/index/index.html
+++ b/html/index/index.html
@@ -101,7 +101,7 @@
             市中心的崁仔頂街，是清軍在基隆所興建的第一條街、「獅球嶺隧道」更是台灣鐵道史上的第一條隧道，而基隆「吉古拉」的味道更受到當時日本人所留下的影響。
             <br/>
             <br/>
-            。基隆目前共有七個行政區域，另有七個附屬島嶼，分別為和平島、中山仔嶼、桶盤嶼、基隆嶼、彭佳嶼、棉花嶼及花瓶嶼，其中和平島(舊社寮島)、中山仔嶼、桶盤嶼三島今已連為一體，即今日所稱和平島，各區域和島嶼依隨山、海、河、港而有不同的景致與遊賞路線
+            基隆目前共有七個行政區域，另有七個附屬島嶼，分別為和平島、中山仔嶼、桶盤嶼、基隆嶼、彭佳嶼、棉花嶼及花瓶嶼，其中和平島(舊社寮島)、中山仔嶼、桶盤嶼三島今已連為一體，即今日所稱和平島，各區域和島嶼依隨山、海、河、港而有不同的景致與遊賞路線
           </p>
         </div>
         <div class="images_1">
