--- a/html/custom/custom.html
+++ b/html/custom/custom.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>自訂行程</title>
+    <title>自定行程</title>
     <link href="./custom.css" rel="stylesheet">
     <link
       rel="stylesheet"
@@ -60,7 +60,7 @@
                   <a href="../recommend/recommend.html">推薦行程</a>
                 </li>
                 <li>
-                  <a href="../custom/custom.html">客制規劃</a>
+                  <a href="../custom/custom.html">自訂行程</a>
                 </li>
               </ul>
             </div>
