--- a/html/custom/custom.html
+++ b/html/custom/custom.html
@@ -79,7 +79,7 @@
       <a href="../index/index.html"><img class="logo" src="../../use_photo/navbar/kwlogo.png "></a>
       <a href="../index/index.html"><img  class="logo2" src="../../use_photo/navbar/fron_logo.png"></a>
       <div class="img"><img class="menu" src="../../use_photo/navbar/bg.png"></div>
-      <p>行程安排/自定行程</p>
+      <p>行程安排/自訂行程</p>
     </nav>
     <div class="banner">
       <p>開始一場旅行吧!</p>
