--- a/html/master/master.html
+++ b/html/master/master.html
@@ -25,16 +25,16 @@
                 主題景點
                 <ul class="theme">
                   <li>
-                    <a href="../mountain/mountain.html">幽遊山徑</a>
+                    <a href="../mountain/mountain.html"><span>幽遊山徑</span></a>
                   </li>
                   <li>
-                    <a href="../mountain/mountain.html">無敵海景</a>
+                    <a href="../mountain/mountain.html"><span>無敵海景</span></a>
                   </li>
                   <li>
-                    <a href="../mountain/mountain.html">打卡熱點</a>
+                    <a href="../mountain/mountain.html"><span>打卡熱點</span></a>
                   </li>
                   <li>
-                    <a href="../mountain/mountain.html">知性之旅</a>
+                    <a href="../mountain/mountain.html"><span>知性之旅</span></a>
                   </li>
                 </ul>
               </div>
@@ -44,10 +44,10 @@
                 小吃攻略
                 <ul class="food">
                   <li>
-                    <a href="../night_market/night_market.html">廟口特輯</a>
+                    <a href="../night_market/night_market.html"><span>廟口特輯</span></a>
                   </li>
                   <li>
-                    <a href="../night_market/night_market.html">咖啡之旅</a>
+                    <a href="../night_market/night_market.html"><span>咖啡之旅</span></a>
                   </li>
                 </ul>
               </div>
@@ -57,10 +57,10 @@
                 行程安排
                 <ul class="travel">
                   <li>
-                    <a href="../recommend/recommend.html">推薦行程</a>
+                    <a href="../recommend/recommend.html"><span>推薦行程</span></a>
                   </li>
                   <li>
-                    <a href="../custom/custom.html">客制規劃</a>
+                    <a href="../custom/custom.html"><span>自訂行程</span></a>
                   </li>
                 </ul>
               </div>
@@ -79,10 +79,12 @@
         <a href="../index/index.html"><img class="logo" src="../../use_photo/navbar/kwlogo.png "></a>
         <a href="../index/index.html"><img  class="logo2" src="../../use_photo/navbar/fron_logo.png"></a>
         <div class="img"><img class="menu" src="../../use_photo/navbar/bg.png"></div>
-        <p>達人分享</p>
       </nav>
       <div class="banner">
         <p>達人分享</p>
+      </div>
+      <div class="bread">
+        <a href="../index/index.html">首頁</a > / <span>達人分享</span>
       </div>
       <main class="main">
         <article class="frist">
@@ -93,26 +95,34 @@
         <article class="two">
           <div class="background">
             <p class="one">基隆的咖啡文化有著獨特的韻味，用一杯賽風壺煮的咖啡醒醒頭腦，開始一天的生活，在基隆喝咖啡就是這麼生活化。</p>
-            <img src="./images/block_2_1.png">
-            <img src="images/block_2_2.png">
-            <img src="./images/block_2_3.png">
+              <img src="./images/block_2_1.png">
+              <img src="images/block_2_2.png">
+              <img src="./images/block_2_3.png">
             <p class="two">金豆舊店的原址位於31號陸橋下，因想為客人帶來更完整的品嘗咖啡過程，
               所以在現址開了一間有室內座位的店面，保留了房子原始的格局包含挑高的空間及巴洛克風的外觀。</p>
           </div>
         </article>
         <article class="three">
-          <img src="./images/block_3_1.png">
-          <img src="./images/block_3_2.png">
+          <div class="middle">
+            <img class="block_3_1" src="./images/block_3_1.png">
+            <img class="back" src="./icons/Ellipse 26.svg">
+            <img class="block_3_2" src="./images/block_3_2.png">
+          </div>
           <p>二樓為展覽區，不定期會展出基隆相關的文藝展覽，是市中心這一帶少有的結合咖啡與文藝的店家在二樓晃晃，仍保有老屋的味道，窗外車水馬龍的吵雜聲似乎都被凍結了。</p>
-          <img class="back" src="./icons/Ellipse 26.svg">
+          
         </article>
         <article class="four">
-          <img src="./images/block_4_1.png">
-          <img src="./images/block_4_2.png">
+          <div class="middle">
+            <img src="./images/block_4_1.png">
+            <img src="./images/block_4_2.png">
+         </div>
           <p class="one">老闆煮的單品咖啡一定要試試，感受咖啡隨著溫度變化，氣味的轉變。</p>
-          <img src="./images/block_4_3.png">
-          <p class="two">附上的小甜點，鬆軟微甜，搭配咖啡很棒，這樣子品味咖啡也算是給自己驚喜，來店內的你不仿也試試看。</p>
-          <img class="back" src="./icons/Ellipse 25.svg">
+          <div class="middle_1">
+            <img id="img" src="./images/block_4_3.png">
+            <p class="two">附上的小甜點，鬆軟微甜，搭配咖啡很棒，這樣子品味咖啡也算是給自己驚喜，來店內的你不仿也試試看。</p>
+            <img class="back" src="./icons/Ellipse 25.svg">
+          </div>
+          
         </article>
       </main>
       <div class="footer">
@@ -125,8 +135,8 @@
       </div>
       <div class="slogan">
         <p class="h1">基隆漫步 Keelung Walk</p>
-        <a class="fbicon" href="#"><img src="../../use_photo/footer/fb.png"></a>
-        <a class="igicon" href="#"><img src="../../use_photo/footer/ig.png"></a>
+        <!-- <a class="fbicon" href="#"><img src="../../use_photo/footer/fb.png"></a>
+        <a class="igicon" href="#"><img src="../../use_photo/footer/ig.png"></a> -->
         <p class="local">連結在地生活、人物、文化、飲食、旅遊
           深入更多的精彩。</p>
         <p class="copy">Copyright  2021 基隆漫步 Keelung Walk All rights reserved.</p>
@@ -143,7 +153,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
       <script>
         $(function(){
-
         // 點擊
         $("div.img").on("click", function(){
           // -open 的樣式切換
@@ -151,7 +160,6 @@
           });
         });
         $(function(){
-
         // 點擊
         $("img.x").on("click", function(){
             // -open 的樣式切換
