--- a/html/store/store.html
+++ b/html/store/store.html
@@ -25,16 +25,16 @@
                 主題景點
                 <ul class="theme">
                   <li>
-                    <a href="../mountain/mountain.html">幽遊山徑</a>
+                    <a href="../mountain/mountain.html"><span>幽遊山徑</span></a>
                   </li>
                   <li>
-                    <a href="../mountain/mountain.html">無敵海景</a>
+                    <a href="../mountain/mountain.html"><span>無敵海景</span></a>
                   </li>
                   <li>
-                    <a href="../mountain/mountain.html">打卡熱點</a>
+                    <a href="../mountain/mountain.html"><span>打卡熱點</span></a>
                   </li>
                   <li>
-                    <a href="../mountain/mountain.html">知性之旅</a>
+                    <a href="../mountain/mountain.html"><span>知性之旅</span></a>
                   </li>
                 </ul>
               </div>
@@ -44,10 +44,10 @@
                 小吃攻略
                 <ul class="food">
                   <li>
-                    <a href="../night_market/night_market.html">廟口特輯</a>
+                    <a href="../night_market/night_market.html"><span>廟口特輯</span></a>
                   </li>
                   <li>
-                    <a href="../night_market/night_market.html">咖啡之旅</a>
+                    <a href="../night_market/night_market.html"><span>咖啡之旅</span></a>
                   </li>
                 </ul>
               </div>
@@ -57,10 +57,10 @@
                 行程安排
                 <ul class="travel">
                   <li>
-                    <a href="../recommend/recommend.html">推薦行程</a>
+                    <a href="../recommend/recommend.html"><span>推薦行程</span></a>
                   </li>
                   <li>
-                    <a href="../custom/custom.html">自訂行程</a>
+                    <a href="../custom/custom.html"><span>自訂行程</span></a>
                   </li>
                 </ul>
               </div>
@@ -79,10 +79,12 @@
         <a href="../index/index.html"><img class="logo" src="../../use_photo/navbar/kwlogo.png "></a>
         <a href="../index/index.html"><img  class="logo2" src="../../use_photo/navbar/fron_logo.png"></a>
         <div class="img"><img class="menu" src="../../use_photo/navbar/bg.png"></div>
-        <p>選物小店</p>
       </nav>
       <div class="banner">
         <p>選物小店</p>
+      </div>
+      <div class="bread">
+        <a href="../index/index.html">首頁</a > / <a href="#"a>主題景點</a> / <span>幽遊山徑</span>
       </div>
       <main class="main">
         <p class="sol animate__animated animate__fadeInDown">基隆在地的選物店，把基隆的好物與你分享。</p>
