--- a/html/custom/custom.html
+++ b/html/custom/custom.html
@@ -25,16 +25,16 @@
               主題景點
               <ul class="theme">
                 <li>
-                  <a href="../mountain/mountain.html">幽遊山徑</a>
+                  <a href="../mountain/mountain.html"><span>幽遊山徑</span></a>
                 </li>
                 <li>
-                  <a href="../mountain/mountain.html">無敵海景</a>
+                  <a href="../mountain/mountain.html"><span>無敵海景</span></a>
                 </li>
                 <li>
-                  <a href="../mountain/mountain.html">打卡熱點</a>
+                  <a href="../mountain/mountain.html"><span>打卡熱點</span></a>
                 </li>
                 <li>
-                  <a href="../mountain/mountain.html">知性之旅</a>
+                  <a href="../mountain/mountain.html"><span>知性之旅</span></a>
                 </li>
               </ul>
             </div>
@@ -44,23 +44,23 @@
               小吃攻略
               <ul class="food">
                 <li>
-                  <a href="../night_market/night_market.html">廟口特輯</a>
+                  <a href="../night_market/night_market.html"><span>廟口特輯</span></a>
                 </li>
                 <li>
-                  <a href="../night_market/night_market.html">咖啡之旅</a>
+                  <a href="../night_market/night_market.html"><span class="xxx">咖啡之旅</span></a>
                 </li>
               </ul>
             </div>
           </li>
           <li class="a1">
             <div class="travel_block">
-              行程安排
+              <span class="background">行程安排</span>
               <ul class="travel">
                 <li>
-                  <a href="../recommend/recommend.html">推薦行程</a>
+                  <a href="../recommend/recommend.html"><span>推薦行程</span></a>
                 </li>
                 <li>
-                  <a href="../custom/custom.html">自訂行程</a>
+                  <a href="../custom/custom.html"><span>自訂行程</span></a>
                 </li>
               </ul>
             </div>
@@ -79,10 +79,12 @@
       <a href="../index/index.html"><img class="logo" src="../../use_photo/navbar/kwlogo.png "></a>
       <a href="../index/index.html"><img  class="logo2" src="../../use_photo/navbar/fron_logo.png"></a>
       <div class="img"><img class="menu" src="../../use_photo/navbar/bg.png"></div>
-      <p>行程安排/自訂行程</p>
     </nav>
     <div class="banner">
       <p>開始一場旅行吧!</p>
+    </div>
+    <div class="bread">
+      <a href="../index/index.html">首頁</a > / <a href="#"a>行程安排</a> / <span>自訂行程</span>
     </div>
     <main class="main">
       <p class="sol animate__animated animate__fadeInDown"> 將景點圖片拖移至框框內，開始規劃今天的行程吧!</p>
@@ -166,8 +168,8 @@
       </div>
       <div class="slogan">
         <p class="h1">基隆漫步 Keelung Walk</p>
-        <a class="fbicon" href="#"><img src="../../use_photo/footer/fb.png"></a>
-        <a class="igicon" href="#"><img src="../../use_photo/footer/ig.png"></a>
+        <!-- <a class="fbicon" href="#"><img src="../../use_photo/footer/fb.png"></a>
+        <a class="igicon" href="#"><img src="../../use_photo/footer/ig.png"></a> -->
         <p class="local">連結在地生活、人物、文化、飲食、旅遊
           深入更多的精彩。</p>
         <p class="copy">Copyright  2021 基隆漫步 Keelung Walk All rights reserved.</p>
