--- a/html/mountain/mountain.html
+++ b/html/mountain/mountain.html
@@ -22,19 +22,19 @@
           <ul>
             <li class="a1">
               <div class="theme_block">
-                主題景點
+                <span class="background">主題景點</span>
                 <ul class="theme">
                   <li>
-                    <a href="../mountain/mountain.html">幽遊山徑</a>
+                    <a href="../mountain/mountain.html"><span>幽遊山徑</span></a>
                   </li>
                   <li>
-                    <a href="../mountain/mountain.html">無敵海景</a>
+                    <a href="../mountain/mountain.html"><span>無敵海景</span></a>
                   </li>
                   <li>
-                    <a href="../mountain/mountain.html">打卡熱點</a>
+                    <a href="../mountain/mountain.html"><span>打卡熱點</span></a>
                   </li>
                   <li>
-                    <a href="../mountain/mountain.html">知性之旅</a>
+                    <a href="../mountain/mountain.html"><span>知性之旅</span></a>
                   </li>
                 </ul>
               </div>
@@ -44,10 +44,10 @@
                 小吃攻略
                 <ul class="food">
                   <li>
-                    <a href="../night_market/night_market.html">廟口特輯</a>
+                    <a href="../night_market/night_market.html"><span>廟口特輯</span></a>
                   </li>
                   <li>
-                    <a href="../night_market/night_market.html">咖啡之旅</a>
+                    <a href="../night_market/night_market.html"><span>咖啡之旅</span></a>
                   </li>
                 </ul>
               </div>
@@ -57,10 +57,10 @@
                 行程安排
                 <ul class="travel">
                   <li>
-                    <a href="../recommend/recommend.html">推薦行程</a>
+                    <a href="../recommend/recommend.html"><span>推薦行程</span></a>
                   </li>
                   <li>
-                    <a href="../custom/custom.html">自訂行程</a>
+                    <a href="../custom/custom.html"><span>自訂行程</span></a>
                   </li>
                 </ul>
               </div>
@@ -79,21 +79,60 @@
         <a href="../index/index.html"><img class="logo" src="../../use_photo/navbar/kwlogo.png "></a>
         <a href="../index/index.html"><img  class="logo2" src="../../use_photo/navbar/fron_logo.png"></a>
         <div class="img"><img class="menu" src="../../use_photo/navbar/bg.png"></div>
-        <p>主題景點/幽遊山徑</p>
-        <!-- <div class="banner2">
-        </div> -->
       </nav>
       <div class="banner">
         <p>幽遊山徑</p>
       </div>
-      
+      <div class="bread">
+        <a href="../index/index.html">首頁</a > / <a href="#"a>主題景點</a> / <span>幽遊山徑</span>
+      </div>
       <main class="main">
         <p class="sol animate__animated animate__fadeInDown">基隆擁抱著海洋與山丘，愜意的吹著山風俯瞰海洋，亦或是沿著海岸望向山丘，都是遊歷基隆的最佳選擇</p>
         <div class="valley">
           <p class="valley">望幽谷</p>
           <p class="valley_content">基隆市八斗子漁港旁的美麗山谷，與山海相依，望幽谷是一個V字型的山谷，可在綠油油的草地放鬆也可看到八斗子漁港來往的漁船，以及可眺望到遠處的基隆嶼，遊客至此，在環狀的稜線及山谷步道，漫步於山谷草地，走於臨崖的稜線，遠眺海天，俯瞰崖下的海蝕平台豆腐岩，還有雄奇可觀的臨海峭壁，夜晚時分海面上漁火點點與九份山城的燈火，形成一齣唯美的山海之戀。</p>
           <img class="icon" src="./images/icon/Group_icon.png">
-          <img class="valley_img" src="./images/valley.jpg">
+          <div class="valley_play">
+            <ul class="slides">
+              <input type="radio" id="control-1" name="control" checked>
+              <input type="radio" id="control-2" name="control">
+              <input type="radio" id="control-3" name="control">
+              <!--  Left/Right Button  -->
+              <div class="navigator slide-1">
+                <label for="control-3">
+                  <i class="fas fa-chevron-left"></i>
+                </label>
+                <label for="control-2">
+                  <i class="fas fa-chevron-right"></i>
+                </label>
+              </div>
+              <div class="navigator slide-2">
+                <label for="control-1">
+                  <i class="fas fa-chevron-left"></i>
+                </label>
+                <label for="control-3">
+                  <i class="fas fa-chevron-right"></i>
+                </label>
+              </div>
+              <div class="navigator slide-3">
+                <label for="control-2">
+                  <i class="fas fa-chevron-left"></i>
+                </label>
+                <label for="control-1">
+                  <i class="fas fa-chevron-right"></i>
+                </label>
+              </div>
+              <!--  /Left/Right Button  -->
+              <li class="slide"></li>
+              <li class="slide"></li>
+              <li class="slide"></li>
+              <div class="controls-visible">
+                <label for="control-1"></label>
+                <label for="control-2"></label>
+                <label for="control-3"></label>
+              </div>
+            </ul>
+          </div>
           <img class="row" src="./images/other/row.png">
           <p class="position">望幽谷濱海步道</p>
           <p class="bus">基隆市公車總站搭103號公車至「八斗子站」下車</p>
@@ -103,7 +142,47 @@
           <p class="valley">老鷹岩</p>
           <p class="valley_content">老鷹岩觀景台可以俯瞰著大武崙澳底漁港，遠處那小小凸出的石頭則是基隆嶼，觀景台旁的基石有一個明顯的控制點，除了這裡的展望台角度特別好之外，沿著回程的路上也可以到城堡觀景台 ，而那邊的高度則是可以看到整個情人湖的高點，試著在這附近找看看有沒有不同角度可以看到漁港的位置。</p>
           <img class="icon" src="./images/icon/Group_icon.png">
-          <img class="valley_img" src="./images/rock.jpg">
+          <div class="rock_play">
+            <ul class="slides">
+              <input type="radio" id="control-4" name="control_1" checked>
+              <input type="radio" id="control-5" name="control_1">
+              <input type="radio" id="control-6" name="control_1">
+              <!--  Left/Right Button  -->
+              <div class="navigator slide-1">
+                <label for="control-6">
+                  <i class="fas fa-chevron-left_1"></i>
+                </label>
+                <label for="control-5">
+                  <i class="fas fa-chevron-right_1"></i>
+                </label>
+              </div>
+              <div class="navigator slide-2">
+                <label for="control-4">
+                  <i class="fas fa-chevron-left_1"></i>
+                </label>
+                <label for="control-6">
+                  <i class="fas fa-chevron-right_1"></i>
+                </label>
+              </div>
+              <div class="navigator slide-3">
+                <label for="control-5">
+                  <i class="fas fa-chevron-left_1"></i>
+                </label>
+                <label for="control-4">
+                  <i class="fas fa-chevron-right_1"></i>
+                </label>
+              </div>
+              <!--  /Left/Right Button  -->
+              <li class="slide"></li>
+              <li class="slide"></li>
+              <li class="slide"></li>
+              <div class="controls-visible">
+                <label for="control-4"></label>
+                <label for="control-5"></label>
+                <label for="control-6"></label>
+              </div>
+            </ul>
+          </div>
           <img class="row" src="./images/other/row.png">
           <p class="position">基隆市中山區大武崙砲台步道內</p>
           <p class="bus">搭乘基隆市公車509號「情人湖站」下車</p>
@@ -113,7 +192,47 @@
           <p class="valley">佛手洞</p>
           <p class="valley_content">佛手洞之名係因洞內深處的石壁上方，有天然風化形成像是手掌和五指的節理，唯妙唯肖就像是佛的手印，加上又位於「仙洞巖」隔壁，所以被取名「佛手洞」，佛手洞內有數個走道分別通往不同洞窟，走入洞穴有種探險掘密的新鮮觸動，陰涼感受又如天然冷氣，十分特殊。</p>
           <img class="icon" src="./images/icon/Group_icon.png">
-          <img class="valley_img" src="./images/hole.jpeg">
+          <div class="hole_play">
+            <ul class="slides">
+              <input type="radio" id="control-7" name="control_2" checked>
+              <input type="radio" id="control-8" name="control_2">
+              <input type="radio" id="control-9" name="control_2">
+              <!--  Left/Right Button  -->
+              <div class="navigator slide-1">
+                <label for="control-9">
+                  <i class="fas fa-chevron-left_2"></i>
+                </label>
+                <label for="control-8">
+                  <i class="fas fa-chevron-right_2"></i>
+                </label>
+              </div>
+              <div class="navigator slide-2">
+                <label for="control-7">
+                  <i class="fas fa-chevron-left_2"></i>
+                </label>
+                <label for="control-9">
+                  <i class="fas fa-chevron-right_2"></i>
+                </label>
+              </div>
+              <div class="navigator slide-3">
+                <label for="control-8">
+                  <i class="fas fa-chevron-left_2"></i>
+                </label>
+                <label for="control-7">
+                  <i class="fas fa-chevron-right_2"></i>
+                </label>
+              </div>
+              <!--  /Left/Right Button  -->
+              <li class="slide"></li>
+              <li class="slide"></li>
+              <li class="slide"></li>
+              <div class="controls-visible">
+                <label for="control-7"></label>
+                <label for="control-8"></label>
+                <label for="control-9"></label>
+              </div>
+            </ul>
+          </div>
           <img class="row" src="./images/other/row.png">
           <p class="position">基隆市中山區仁安街11號</p>
           <p class="bus">搭乘基隆市公車301、302號於「仙洞巖站」下車</p>
@@ -123,13 +242,14 @@
           <P>猜你也想去</P>
         </div>
         <div class="column">
-          <a href="#"><img src="./images/go1.png"></a>
-          <a href="#"><img src="./images/go2.png"></a>
-          <a href="#"><img src="./images/go3.png"></a>
-          <a href="#"><img src="./images/go4.png"></a>
-          <a href="#"><img src="./images/go5.png"></a>
-          <a  href="#"><img class="top_gap" src="./images/go6.png"></a>
-          <a class="bottom_gap" href="#"><img src="./images/go7.png"></a>
+          <a href="#" class="go1"><img src="./images/go1.png"><div class="notes">和平島公園</div></a>
+          <a href="#" class="go2"><img src="./images/go2.png"><div class="notes">阿根那造船廠</div></a>
+          <a href="#" class="go3"><img src="./images/go3.png"><div class="notes">外木山步道</div></a>
+          <a href="#" class="go4"><img src="./images/go4.png"><div class="notes">海科館</div></a>
+          <a href="#" class="go5"><img src="./images/go5.png"><div class="notes">鐵道自行車</div></a>
+          <a href="#" class="go6"><img class="top_gap" src="./images/go6.png"><div class="notes">基隆燈塔</div></a>
+          <a class="bottom_gap" href="#"><img src="./images/go7.png"><div class="notes">正濱漁港彩色屋</div></a>
+        </div>
         </div>
       </main>
       <div class="footer">
@@ -142,8 +262,8 @@
       </div>
       <div class="slogan">
         <p class="h1">基隆漫步 Keelung Walk</p>
-        <a class="fbicon" href="#"><img src="../../use_photo/footer/fb.png"></a>
-        <a class="igicon" href="#"><img src="../../use_photo/footer/ig.png"></a>
+        <!-- <a class="fbicon" href="#"><img src="../../use_photo/footer/fb.png"></a>
+        <a class="igicon" href="#"><img src="../../use_photo/footer/ig.png"></a> -->
         <p class="local">連結在地生活、人物、文化、飲食、旅遊
           深入更多的精彩。</p>
         <p class="copy">Copyright  2021 基隆漫步 Keelung Walk All rights reserved.</p>
